Fix p spacing

--- a/src/components/ArticleEditor/ArticleEditor.module.scss
+++ b/src/components/ArticleEditor/ArticleEditor.module.scss
@@ -966,10 +966,6 @@
       margin-top: 0;
       margin-bottom: 20px;
 
-      &:last-child {
-        margin-bottom: 0px;
-      }
-
       code {
         color: var(--brand-text);
         font-family: "Fira Mono", monospace;
@@ -1273,8 +1269,12 @@
     .editor {
       min-height: 0;
 
-      p:last-child {
-        height: 0;
+      >div {
+        >p:last-child {
+          height: 0;
+          margin-bottom: 0px;
+        }
+
       }
     }
   }
